# Blitz

./: .gitignore  Makefile.am  README.md  configure.ac  install_data.sh  update.sh
client/src/: battleMain.lua  config.lua  main.lua
etc/: army.csv  broadcast.csv  buff.csv  buygold.csv  buygoldcost.csv  buygoldcrit.csv  change.csv  citylv.csv  corps.csv  dialogue.csv  equip.csv  equipcost.csv  equipsuit.csv  event.csv  exp.csv  exploit.csv  exploitrain.csv  exploitrank.csv  forge.csv  forge_item.csv  global.conf  herotype.csv  initial.csv  item.csv  level.csv  money.csv  monthcard.csv  network.conf  onlinegift.csv  parameter.csv  pvp.csv  pvpreward.csv  recast.csv  recruit.csv  recruithero.csv  reward.csv  sensitivewordconfig.csv  shop.csv  side.csv  skill.csv  (+7 more)
include/: agentsvr_msg.h  dbsvr_msg.h  fdsvr_msg.h  fightsvr_msg.h  gamesvr_msg.h  idsvr_msg.h  libgame_msg.h  loginsvr_msg.h  mapsvr_msg.h  message.h  sys.h  worldsvr_msg.h
include/agentsvr/: as_arena_lose.h  as_chat.h  as_common.h  as_fight_info.h  as_gm.h  as_login.h  as_mexp.h  as_player_soldier_info.h  as_register.h  as_system_notify.h  cl_appearance.h  cl_arena_award.h  cl_arena_challenge.h  cl_arena_list.h  cl_arena_ranking_list.h  cl_chat.h  cl_employ.h  cl_equipup.h  cl_expup.h  cl_fight_result.h  cl_forge.h  cl_formation.h  cl_login.h  cl_map_pvp.h  cl_map_subscribe.h  cl_move.h  cl_notify.h  cl_player_soldier_info.h  cl_query_corps.h  cl_recast.h  cl_recharge.h  cl_recruit.h  cl_score_ranking_list.h  cl_sell.h  cl_shadow.h  cl_shop.h  cl_soldier_ranking_list.h  cl_soldierup.h  cl_stage.h  cl_supplement.h  (+6 more)
include/dbsvr/: db_account.h  db_agent.h  db_appearance.h  db_arena_award.h  db_arena_challenge.h  db_chat.h  db_employ.h  db_equipup.h  db_expup.h  db_forge.h  db_formation.h  db_gm.h  db_login.h  db_logout.h  db_mexp.h  db_recast.h  db_recharge.h  db_recruit.h  db_sell.h  db_shadow.h  db_shop.h  db_soldierup.h  db_stage.h  db_supplement.h  db_task.h  db_tech.h  db_timer.h  db_train.h  db_use_equip.h  db_use_hero.h  db_use_item.h
include/fightsvr/: fs_fight.h
include/gamesvr/: gs_command.h
include/idsvr/: id_gen.h
include/libgame/: g_award.h  g_bag.h  g_chat.h  g_cooldown.h  g_defines.h  g_fight.h  g_forge.h  g_formation.h  g_gm.h  g_map.h  g_player.h  g_powerlist.h  g_soldier.h  g_task.h  g_tech.h  g_train.h  g_value.h  g_world.h
include/loginsvr/: ls_login.h  ls_register.h
include/mapsvr/: mc_login.h  ms_login.h  ms_logout.h  ms_move.h  ms_pvp.h  ms_query_corps.h  ms_shadow.h  ms_subscribe.h  ms_supplement.h  ms_update_info.h
include/sys/: network.h
include/worldsvr/: ws_arena_award.h  ws_arena_challenge.h  ws_arena_list.h  ws_arena_ranking_list.h  ws_login.h  ws_logout.h  ws_player_touch.h  ws_register.h  ws_score_ranking_list.h  ws_score_update.h  ws_soldier_ranking_list.h  ws_soldier_update.h  ws_update_info.h
script/: agentsvr.lua  boot.lua  dbsvr.lua  fightsvr.lua  gamesvr.lua  idsvr.lua  mapsvr.lua  worldsvr.lua
script/fightsvr/: fight.lua  res
script/lib/: eval.lua  print_table.lua  string.lua
script/sys/: network.lua
script/var/: message.var
sdl/: message.sdl
sdl/agentsvr/: as_arena_lose.sdl  as_chat.sdl  as_fight_info.sdl  as_gm.sdl  as_login.sdl  as_mexp.sdl  as_player_soldier_info.sdl  as_register.sdl  as_system_notify.sdl  cl_appearance.sdl  cl_arena_award.sdl  cl_arena_challenge.sdl  cl_arena_list.sdl  cl_arena_ranking_list.sdl  cl_chat.sdl  cl_employ.sdl  cl_equipup.sdl  cl_expup.sdl  cl_fight_result.sdl  cl_forge.sdl  cl_formation.sdl  cl_login.sdl  cl_map_pvp.sdl  cl_map_subscribe.sdl  cl_move.sdl  cl_notify.sdl  cl_player_soldier_info.sdl  cl_query_corps.sdl  cl_recast.sdl  cl_recharge.sdl  cl_recruit.sdl  cl_score_ranking_list.sdl  cl_sell.sdl  cl_shadow.sdl  cl_shop.sdl  cl_soldierup.sdl  (+9 more)
sql/: sgq.sql
src/: Makefile.am
src/agentsvr/: Makefile.am  agentsvr.cpp  agentsvr.h  as_arena_lose.cpp  as_chat.cpp  as_fight_info.cpp  as_gm.cpp  as_login.cpp  as_mexp.cpp  as_player_soldier_info.cpp  as_register.cpp  as_system_notify.cpp  cl_appearance.cpp  cl_arena_award.cpp  cl_arena_challenge.cpp  cl_arena_list.cpp  cl_arena_ranking_list.cpp  cl_chat.cpp  cl_employ.cpp  cl_equipup.cpp  cl_expup.cpp  cl_fight_result.cpp  cl_forge.cpp  cl_formation.cpp  cl_login.cpp  cl_map_pvp.cpp  cl_map_subscribe.cpp  cl_move.cpp  cl_player_soldier_info.cpp  cl_query_corps.cpp  cl_recast.cpp  cl_recharge.cpp  cl_recruit.cpp  cl_score_ranking_list.cpp  cl_sell.cpp  cl_shadow.cpp  cl_shop.cpp  cl_soldier_ranking_list.cpp  cl_soldierup.cpp  cl_stage.cpp  (+7 more)
src/dbsvr/: Makefile.am  db_account.cpp  db_agent.cpp  db_appearance.cpp  db_arena_award.cpp  db_arena_challenge.cpp  db_chat.cpp  db_employ.cpp  db_equipup.cpp  db_expup.cpp  db_forge.cpp  db_formation.cpp  db_gm.cpp  db_login.cpp  db_logout.cpp  db_mexp.cpp  db_recast.cpp  db_recharge.cpp  db_recruit.cpp  db_sell.cpp  db_shadow.cpp  db_shop.cpp  db_soldierup.cpp  db_stage.cpp  db_supplement.cpp  db_task.cpp  db_tech.cpp  db_timer.cpp  db_train.cpp  db_use_equip.cpp  db_use_hero.cpp  db_use_item.cpp  dbsvr.cpp  dbsvr.h
src/libgame/: Makefile.am  arena.cpp  arena.h  arena_award.cpp  arena_award.h  award.cpp  award.h  bag.cpp  bag.h  chat.cpp  chat.h  context.cpp  context.h  cooldown.cpp  cooldown.h  corps.cpp  corps.h  equip.cpp  equip.h  fight.cpp  fight.h  forge.cpp  forge.h  formation.cpp  formation.h  game.h  global.cpp  global.h  gm.cpp  gm.h  guid.h  item.cpp  item.h  level.cpp  level.h  map.cpp  map.h  map_city.cpp  map_city.h  map_player.cpp  (+52 more)
src/mapsvr/: Makefile.am  mapsvr.cpp  mapsvr.h  mc_login.cpp  ms_login.cpp  ms_logout.cpp  ms_move.cpp  ms_pvp.cpp  ms_query_corps.cpp  ms_shadow.cpp  ms_subscribe.cpp  ms_supplement.cpp  ms_update_info.cpp
src/worldsvr/: Makefile.am  worldsvr.cpp  worldsvr.h  ws_arena_award.cpp  ws_arena_challenge.cpp  ws_arena_list.cpp  ws_arena_ranking_list.cpp  ws_login.cpp  ws_logout.cpp  ws_player_touch.cpp  ws_register.cpp  ws_score_ranking_list.cpp  ws_score_update.cpp  ws_soldier_ranking_list.cpp  ws_soldier_update.cpp  ws_update_info.cpp
web/: db.php  gm.php  manage.php  serverlist.php
(+374 files in other folders)
