bin_PROGRAMS = agentsvr

agentsvr_SOURCES =             \
    agentsvr.cpp               \
    as_login.cpp               \
    as_fight_info.cpp          \
    as_arena_lose.cpp          \
    as_player_soldier_info.cpp \
    as_register.cpp            \
    as_system_notify.cpp       \
    as_gm.cpp                  \
    as_chat.cpp                \
    as_mexp.cpp                \
    cl_login.cpp               \
    cl_shop.cpp                \
    cl_forge.cpp               \
    cl_use_item.cpp            \
    cl_recharge.cpp            \
    cl_equipup.cpp             \
    cl_recast.cpp              \
    cl_recruit.cpp             \
    cl_soldierup.cpp           \
    cl_train.cpp               \
    cl_employ.cpp              \
    cl_use_hero.cpp            \
    cl_use_equip.cpp           \
    cl_expup.cpp               \
    cl_formation.cpp           \
    cl_tech.cpp                \
    cl_stage.cpp               \
    cl_task.cpp                \
    cl_supplement.cpp          \
    cl_move.cpp                \
    cl_query_corps.cpp         \
    cl_shadow.cpp              \
    cl_arena_list.cpp          \
    cl_arena_challenge.cpp     \
    cl_arena_award.cpp         \
    cl_soldier_ranking_list.cpp\
    cl_score_ranking_list.cpp  \
    cl_player_soldier_info.cpp \
    cl_fight_result.cpp        \
    cl_arena_ranking_list.cpp  \
    cl_appearance.cpp          \
    cl_chat.cpp                \
    cl_sell.cpp                \
    cl_map_subscribe.cpp       \
    cl_map_pvp.cpp




AM_LDFLAGS = -lgxs -lgame

