bin_PROGRAMS = dbsvr

dbsvr_SOURCES =             \
    dbsvr.cpp               \
    db_account.cpp          \
    db_login.cpp            \
    db_shop.cpp             \
    db_forge.cpp            \
    db_recharge.cpp         \
    db_use_item.cpp         \
    db_equipup.cpp          \
    db_recast.cpp           \
    db_recruit.cpp          \
    db_soldierup.cpp        \
    db_train.cpp            \
    db_employ.cpp           \
    db_use_hero.cpp         \
    db_use_equip.cpp        \
    db_expup.cpp            \
    db_formation.cpp        \
    db_tech.cpp             \
    db_stage.cpp            \
    db_timer.cpp            \
    db_task.cpp             \
    db_supplement.cpp       \
    db_shadow.cpp           \
    db_arena_challenge.cpp  \
    db_arena_award.cpp      \
    db_appearance.cpp       \
    db_gm.cpp               \
    db_chat.cpp             \
    db_sell.cpp             \
    db_logout.cpp           \
    db_agent.cpp            \
    db_mexp.cpp

AM_LDFLAGS = -lgxs -lgame

