lib_LTLIBRARIES = libgame.la

libgame_la_SOURCES = 		\
    libgame.cpp                 \
    item.cpp                    \
    bag.cpp                     \
    player.cpp                  \
    global.cpp                  \
    shop.cpp                    \
    forge.cpp                   \
    cooldown.cpp                \
    context.cpp                 \
    equip.cpp                   \
    level.cpp                   \
    value.cpp                   \
    recharge.cpp                \
    vip.cpp                     \
    recast.cpp                  \
    award.cpp                   \
    soldier.cpp                 \
    corps.cpp                   \
    recruit.cpp                 \
    soldierup.cpp               \
    train.cpp                   \
    timer.cpp                   \
    param.cpp                   \
    formation.cpp               \
    tech.cpp                    \
    stage.cpp                   \
    task.cpp                    \
    powerlist.cpp               \
    player_init.cpp             \
    map.cpp                     \
    map_unit.cpp                \
    map_player.cpp              \
    map_city.cpp                \
    map_side.cpp                \
    world.cpp                   \
    world_player.cpp            \
    arena.cpp                   \
    fight.cpp                   \
    arena_award.cpp             \
    world_ranking_list.cpp      \
    gm.cpp                      \
    chat.cpp                    \
    npc.cpp

libgame_la_LDFLAGS = -lgxs
