bin_PROGRAMS = mapsvr

mapsvr_SOURCES =           \
    mapsvr.cpp             \
    mc_login.cpp           \
    ms_login.cpp           \
    ms_logout.cpp          \
    ms_move.cpp            \
    ms_supplement.cpp      \
    ms_update_info.cpp     \
    ms_query_corps.cpp     \
    ms_shadow.cpp          \
    ms_subscribe.cpp       \
    ms_pvp.cpp


AM_LDFLAGS = -lgxs -lgame

