bin_PROGRAMS = worldsvr

worldsvr_SOURCES =                \
    worldsvr.cpp                  \
    ws_register.cpp               \
    ws_arena_list.cpp             \
    ws_player_touch.cpp           \
    ws_arena_challenge.cpp        \
    ws_arena_award.cpp            \
    ws_soldier_ranking_list.cpp   \
    ws_score_ranking_list.cpp     \
    ws_arena_ranking_list.cpp     \
    ws_score_update.cpp           \
    ws_soldier_update.cpp         \
    ws_login.cpp                  \
    ws_logout.cpp                 \
    ws_update_info.cpp


AM_LDFLAGS = -lgxs -lgame

